# speech-emotion-recognition-project

./: .gitignore  LICENSE  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
emotion_project/: asgi.py  settings.py  urls.py  wsgi.py
notebooks/: exp1CRNNbaselineRavdess.ipynb  exp1TRANSFORMERbaselineRAVDESS.ipynb  exp2eval.ipynb  exp3.ipynb  exp4.ipynb
recognizer/: apps.py  urls.py  views.py
src/models/: create_scaler.py  data_provider.py  evaluate_cross_corpus.py  train_rcnn_lstm_attention.py  train_transformer_finetune.py
src/preprocessing/to-bronze/: download_raw_data.py
src/preprocessing/to-gold/: 01_extract_metadata.py  02_extract_acoustic_features.py  03_extract_features_vggish.py  04_extract_wav2vec2_features.py  05_extract_hubert_features.py  06_extract_mel_spectrograms.py
src/preprocessing/to-silver/: add_noise.py  chunk_audio.py  enhance_audio.py  unify_audio.py
templates/: index.html
trained_models/: standard_scaler.pkl
