[project]
name = "speech-emotion-recognition-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "django>=6.0.3",
    "dvc>=3.66.1",
    "filelock==3.20.0",
    "fsspec==2025.12.0",
    "jinja2==3.1.6",
    "kagglehub>=1.0.0",
    "librosa>=0.11.0",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.3.5",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pillow==12.0.0",
    "pyarrow>=23.0.1",
    "resampy>=0.4.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools==70.2.0",
    "soundfile>=0.13.1",
    "sympy==1.14.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66.5",
    "transformers>=5.3.0",
    "typing-extensions==4.15.0",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
